--- a/src/demos/00_template/index2.html
+++ b/src/demos/00_template/index2.html
@@ -78,7 +78,7 @@
             arr[i] = newText;
             this.setState({comments: arr});
         },
-        eachComment: function (text, i) {
+        eachComment: function (text, i) { //forgot
             return (<Comment key={i} index={i} updateCommentText={this.updateComment}
                              deleteFromBoard={this.removeComment}>{text}</Comment>);
         },
